--- a/CSS/home.css
+++ b/CSS/home.css
@@ -9,6 +9,10 @@ body {
     width: 100vw;
     overflow-x: hidden;
     background: url(../Images/background.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 html::-webkit-scrollbar {
