--- a/CSS/home.css
+++ b/CSS/home.css
@@ -8,12 +8,11 @@ body {
     height: 100vh;
     width: 100vw;
     overflow-x: hidden;
-    /*background: url(../Images/background.jpg);
+    background: url(../Images/background.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;*/
-    background: red;
+    background-attachment: fixed;
 }
 
 html::-webkit-scrollbar {
@@ -175,21 +174,6 @@ nav {
     text-align: center;
 }
 
-#section-2 {
-    background: url(../Images/background.jpg);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed
-}   
-
-.hero-2 {
-    clip-path: polygon(52% 0%, 97% 0%, 100% 43%, 100% 100%, 100% 100%, 0% 100%, 0% 43%, 0% 43%, 3% 0%);  
-    height: 100%;
-    width: 100%;
-    background-color: blue;
-}
-
 #section-1 h2 {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: #ffffff;
@@ -199,7 +183,7 @@ nav {
     text-transform: uppercase;
     font-family: cursive;
     font-size: 90px;
-    color: white;   
+    color: white;
 }
 
 #section-1 h3 {
@@ -232,9 +216,88 @@ nav {
     color: black;
 }
 
+#section-2 {
+    background: url(../Images/background.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    height: 100vh;
+}
+
+#section-2 .hero-2 {
+    clip-path: polygon(52% 0%, 97% 0%, 100% 43%, 100% 100%, 100% 100%, 0% 100%, 0% 43%, 0% 43%, 3% 0%);
+    height: 100%;
+    width: 100%;
+    background-color: #cfcaff27;
+    display: flex;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: relative;
+    backdrop-filter: blur(6px);
+}
+
+#section-2 .hero-2 h1 {
+    color: white;
+    text-transform: uppercase;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    letter-spacing: 5px;
+}
+
+#section-2 .hero-2 .card-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 15px;
+    position: absolute;
+    top: 20px;
+    height: 50%;
+}
+
+#section-2 .hero-2 .card-div .cards {
+    display: flex;
+    gap: 15px;
+}
+
+#section-2 .hero-2 .card-div .card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 280px;
+    width: 230px;
+    background-color: white;
+}
+
+#section-2 .hero-2 .about-us-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: absolute;
+    bottom: 5px;
+    height: 50%;
+    gap: 30px;
+}
+
+#section-2 .hero-2 .about-us-div p {
+    color: white;
+    font-size: 17px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+#section-2 .hero-2 .about-us-div p a {
+    color: white;
+}
+
 .footer {
     background-color: #1b1b1b;
-    height: 200px;  
+    height: 200px;
     width: 100vw;
     display: flex;
 }
