--- a/CSS/home.css
+++ b/CSS/home.css
@@ -4,15 +4,24 @@
     box-sizing: border-box;
 }
 
+html {
+    height: 100%;
+}
+
 body {
-    height: 100vh;
     width: 100vw;
+    height: 100vh;
+    background-color: black;
     overflow-x: hidden;
+}
+
+.main-div {
+    position: relative;
 }
 
 html::-webkit-scrollbar {
     background-color: transparent;
-    width: 12px;
+    width: 8px;
 }
 
 html::-webkit-scrollbar-thumb {
@@ -42,6 +51,7 @@ nav {
     -webkit-animation: nav-animation 0.5s forwards ease-in;
     position: fixed;
     top: 0;
+    z-index: 5;
 }
 
 @keyframes nav-animation {
@@ -146,8 +156,6 @@ nav {
 }
 
 #section-1 {
-    height: 100%;
-    width: 100%;
     background: white;
     display: flex;
     justify-content: center;
@@ -212,88 +220,198 @@ nav {
 }
 
 #section-2 {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 130px;
     background: url(../Images/background.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    height: 100vh;
 }
 
-.footer {
-    background-color: #1b1b1b;
-    height: 200px;
-    width: 100vw;
-    display: flex;
+#section-2 .page {
+    height: 430px;
+    width: 460px;
+    padding: 10px;
+    text-align: center;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    background-color: #ffffff2a;
+    backdrop-filter: blur(4px);
 }
 
-.footer .row {
-    height: 100%;
-    width: 33.3vw;
-    display: flex;
-    flex-direction: column;
-    background-color: #1b1b1b;
-}
-
-.footer .row-1 {
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-}
-
-.footer .row-1 ul {
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-    gap: 5px;
-}
-
-.footer .row-1 ul li {
-    list-style: none;
-}
-
-.footer .row-1 ul li a {
-    text-decoration: underline;
-    color: white;
-    text-transform: capitalize;
-    font-size: 20px;
-    cursor: pointer;
-}
-
-.footer .row-2 {
+#section-2 #page-2 {
+    text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 5px;
+    position: relative;
 }
 
-.footer .row-2 h3 {
+#section-2 #page-2 .form-hedding-div {
+    margin-bottom: 10px;
+    text-align: center;
     color: white;
     text-transform: uppercase;
 }
 
-.footer .row-2 .follow-links-div {
-    display: flex;
-    gap: 10px;
+#section-2 #page-2 .form-hedding-div h1 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.footer .row-2 .follow-links-div img {
-    width: 30px;
-}
-
-.footer .row-3 {
+#section-2 #page-2 form {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 20px;
+    gap: 20px;
+    width: 100%;
 }
 
-.footer .row-3 h3 {
+#section-2 #page-2 form .input-div {
+    width: 100%;
+}
+
+#section-2 #page-2 form .input-div input[type="email"]{
+    padding: 10px 10px;
+    width: 80%;
+    outline: none;
+    border: none;
+    color: black;
+    font-weight: 300;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
+#section-2 #page-2 form .input-div input[type="email"]::placeholder {
+    color: black;
+}
+
+#section-2 #page-2 form .input-div input[type="email"]:active {
+    background-color: #e2e2e2;
+}
+
+
+#section-2 #page-2 form .massage-input-div textarea {
+    max-height: 150px;
+    max-width: 250px;
+    min-height: 150px;
+    min-width: 250px;
+    outline: none;
+    padding: 10px;
+}
+
+#section-2 #page-2 form .btn-div {
+    width: 100%;
+}
+
+#section-2 #page-2 form .btn-div button {
+    padding: 10px;
+    border: none;
+    outline: none;
+    background: linear-gradient(to right, #d74ab8, #0894fd);
+    color: white;
+    width: 70%;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    cursor: pointer;
+}
+
+#section-2 #page-1 {
+    color: white;
+    width: 460px;
+}
+
+#section-2 #page-1 .box {
+    height: 40%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column; 
+    padding: 10px;
+    gap: 10px;
+}
+
+#section-2 #page-1 .box .chart-div {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+#section-2 #page-1 .box .chart-div .chart {
+    width: 100%;
+    display: flex;
+    gap: 5px;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: left;
+}
+
+#section-2 #page-1 .box .chart-div .chart .bar {
+    height: 20px;
+    width: 70%;
+    background-color: red;
+}
+
+#section-2 #page-1 .box .chart-div .chart .bar-1 {
+    width: 89%;
+    background-color: lightcoral;
+}
+#section-2 #page-1 .box .chart-div .chart .bar-2 {
+    width: 73%;
+    background-color: lightblue;
+}
+#section-2 #page-1 .box .chart-div .chart .bar-3 {
+    width: 58%;
+    background-color: yellow;
+}
+
+#section-2 #page-1 #para {
+    text-transform: capitalize;
+    font-weight: 100;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    margin-top: 30px;
+}
+
+.footer {
+    height: 100px;
+    position: absolute;
+    top: 100%;
+    width: 100vw;
+    background-color: #1b1b1b;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    gap: 20px;
     color: white;
 }
 
-.footer .row-3 h3 a {
+.footer .row-1 img  {
+    width: 20px;
+}
+
+.footer a {
     color: white;
 }
